@@ -1,3 +1,11 @@
+2005-07-10  Rodney Dawes  <dobey@novell.com>
+
+	* capplet-util.c (capplet_set_icon): Update to use the GtkIconTheme
+	API instead of the deprecated GnomeIconTheme API
+	Based on patch from Jan de Groot
+
+	Fixes #171679
+
 2005-06-30  William Jon McCann  <mccann@jhu.edu>
 
 	* file-transfer-dialog.c: Don't include gnome.h
